# mod-comp

./: README.md
docs/: index.html  mod-comp-37d3a05ba2d55737.js  mod-comp-37d3a05ba2d55737_bg.wasm  pract-mod-comp-779d140b3f4e06bb.js  pract-mod-comp-779d140b3f4e06bb_bg.wasm  pract-mod-comp-8776acf925c877ec.js  pract-mod-comp-8776acf925c877ec_bg.wasm  pract-mod-comp-bc380d74488e3386.js  pract-mod-comp-bc380d74488e3386_bg.wasm  styles-5aa99c32ea0dbe56.css  styles-5b38216344b70079.css  styles-d56ceefe14ed5521.css
docs/public/themes/: roma.json
docs/snippets/pract-mod-comp-a5cda389088c9207/: inline0.js
pract-mod-comp/: Cargo.toml  index.html  styles.scss
pract-mod-comp/src/: app.rs  main.rs  router.rs
pract-mod-comp/src/components/: file_uploader.rs  mod.rs  nav_bar.rs  perceptron_simple.rs
pract-mod-comp/src/data/: mod.rs  perceptron_simple.rs
pract-mod-comp/src/data/perceptron-simple/: DatosLS10.csv  DatosLS5.csv  DatosLS50.csv
pract-mod-comp/src/utils/: mod.rs
