[package]
name = "mod-comp"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
csv = "1.3.0"
nalgebra = "0.33.2"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.95"
web-sys = "0.3.72"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
